@@ -16,6 +16,7 @@ Version 1.3.7+svn:
    * show observer team chat messages in the 'Chat Log' window
  * WML engine:
    * now tag [filter_adjacent] is supported in the Standard Unit Filter
+   * now tag [filter_adjacent] is supported in the Standard Location Filter
    * remove the unused [neighbour_unit_filter] animation filter, now that SUF
      does it for us (and better)
    * a minus sign in front of a cardinal direction now reverses it ("-s"="n")
